style.css
/* -------  General Styles ------- */

body {
  font-family: "Lato", sans-serif;
}

h2 {
  font-size: 26px;
  font-weight: 400;
  margin: 0 10px 10px 10px;
  text-align: center;
}

h3 {
  font-size: 18px;
  font-weight: 500;
}

p {
  line-height: 1.5em;
  margin: 0;
}

section {
  padding: 20px;
}

section.alternate-background {
  background-color: #00a699;
  color: #fff;
}

main img {
  width: 100%;
  padding: 10px;
}

/* ---  Groups & Items --- */

.group {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
}

.space-between {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.item {
  flex: 1;
  margin: 10px;
}

.item-double {
  flex: 2;
}

/* -------  Navigation ------- */

header {
  background-color: #ff385c;
  padding: 20px 20px 0 20px;
  text-align: center;
}

.logo {
  font-family: "Pangolin", cursive;
  font-size: 72px;
  color: #fff;
  word-wrap: break-word;
}

header nav ul {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  padding-bottom: 20px;
}

header nav ul li {
  list-style-type: none;
}

header nav ul li a {
  color: #fff;
  text-decoration: none;
  padding: 0 20px 0 0;
}

/* -------  Search Form ------- */
form {
  border: 2px solid #ff385c;
  padding: 10px;
}

form label {
  font-weight: bold;
}

form select,
form input {
  margin-bottom: 20px;
  width: 180px;
}

form button {
  background-color: #ff385c;
  border: none;
  color: #fff;
  font-size: 24px;
  padding: 15px;
  width: 100%;
}

/* -------  Footer ------- */

footer {
  background-color: #ff385c;
}

footer p {
  color: #fff;
  text-align: center;
  padding: 20px;
}

/* -------  Media Query ------- */

@media all and (min-width: 480px) {
  /*----header area ---- */
  header {
    display: flex;
    justify-content: space-between;
    padding: 0 30px;
  }

  .logo {
    margin: 14px 0;
    padding-top: 0;
  }

  header nav {
    margin-top: 30px;
  }

  header nav ul li a:hover {
    color: #bdbdbd;
    text-decoration: none;
  }

  .group {
    display: flex;
    flex-direction: row;
    align-items: center;
  }

  form select,
  form input {
    margin-bottom: 20px;
    width: 280px;
  }
}

